fix some overflow issues

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -22,5 +22,5 @@
 }
 .card.flush {
   padding: 0;
-  overflow: hidden;
+  overflow: clip;
 }
